[package]
name = "stock-options"
version = "0.1.0"
edition = "2021"
description = "Option pricing Greeks calculations using Black-Scholes and Bjerksund-Stensland models"
license = "BSD-3-Clause"
repository = "https://github.com/ajokela/stock-options"
keywords = ["finance", "options", "black-scholes", "greeks", "derivatives"]
categories = ["finance", "mathematics"]

[dependencies]
statrs = "0.16.0"
